compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/specialNames/enum.fir.kt
// COMPARE_WITH_LIGHT_TREE
// !DIAGNOSTICS: -UNUSED_PARAMETER

<!CONFLICTING_JVM_DECLARATIONS{LT}, CONFLICTING_JVM_DECLARATIONS{LT}!>enum class <!CONFLICTING_JVM_DECLARATIONS{PSI}, CONFLICTING_JVM_DECLARATIONS{PSI}!>E<!> {
    A;

    <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>fun values(): Array<E><!> = null!!<!>
    <!CONFLICTING_JVM_DECLARATIONS{LT}!><!CONFLICTING_JVM_DECLARATIONS{PSI}!>fun valueOf(s: String): E<!> = null!!<!>
}<!>
